# CarConnectivity-connector-vw-eu-data-act

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build_and_publish.yml
src/carconnectivity_connectors/vw_eu_data_act/: __init__.py  _version.py  brands.py  client.py  connector.py  dataset.py  vehicle.py
tests/: phev_sample_dataset.json  sample_dataset.json  test_brands_and_decode.py  test_offline.py
